v1.0.0/get-started/validators/vanilla.mdx
---
title: Vanilla Opt-in
sidebarTitle: Vanilla Opt-in
description: 'Opt into mev-commit by simply staking ETH.'
---

## Why use this method?

**Pros:**

* Simple staking (aka vanilla staking) is the most straightforward method for validators to opt-in to mev-commit.
* Vanilla staking requires minimal setup and is permissionless. The vanilla registry allows validators to be opted-in directly by staking native ETH.

**Cons:**

* Vanilla staking is not as capital efficient as using Symbiotic or Eigenlayer, as restaking isn't possible. The ETH used to vanilla stake validators is completely separate from a validator's 32 ETH already staked with the beacon chain.
* Vanilla staking does not support the use of ERC20 collateral.

## Getting Started

Validators are able to _opt-in to mev-commit_ by _vanilla_ staking ETH directly with the `vanillaRegistry` contract.

This action confirms a validator’s attestation to follow the relay selection rule mentioned in the [Validator Guide](/v1.0.0/get-started/validators/validator-guide#requirements).

The vanilla registry strictly accepts BLS public keys as the validator opt-in identifier. Any account can stake on behalf of validator pubkey(s), and only that account has the ability to unstake in the future.

<Warning>
Accounts must only register pubkeys for which they control or otherwise manage. If an account registers a pubkey for which they do not own/manage (think “griefing”), their relevant stake amount may be slashed.
</Warning>

The `VanillaRegistry.minStake` parameter represents how much ETH must be staked per validator pubkey to define that validator as opted-in to mev-commit. On mainnet, `minStake` is 1 ETH, while on Holesky it's 0.0001 ETH.

For large groups of validators, it is recommended to stake in batches of 10-20 public keys at a time to ensure transaction success without hitting gas limits. This process can be tested on Holesky.
    
### Staking validator keys

To vanilla stake validator pubkeys, navigate to the [mainnet](https://validators.mev-commit.xyz/) or [holesky](https://holesky.validators.mev-commit.xyz/dashboard) validator dashboard. Choose "Opt-in", confirm the relevant validator's relays have been correctly configured as specified in the [Validator Guide](/v1.0.0/get-started/validators/validator-guide#requirements), then choose the "Simple" staking route.
